# Learning-Rust

./: .gitignore  README.md
basics/002_guessing_game/: Cargo.toml
basics/004_arrays/src/: main.rs
basics/006_control_flow/src/: main.rs
basics/007-0_ownership/src/: main.rs
basics/007-1_reference_and_borrowing/: Cargo.toml
basics/007-1_reference_and_borrowing/src/: main.rs
basics/007-2_fixing_ownership_err/: CASES.md  Cargo.toml
basics/007-3_slice_type/src/: main.rs
basics/008_structs/src/: main.rs
basics/009_methods/src/: main.rs
basics/010_enums/: Some_None.md
basics/010_enums/src/: main.rs
basics/011_packages_and_crates/: Cargo.toml  REF.md
basics/012_collections/: REF.md
basics/013_error_handling/: NOTES.md
basics/013_error_handling/src/: main.rs
basics/014_Traits_are_just_Interfaces/: Cargo.toml
basics/014_Traits_are_just_Interfaces/src/: main.rs
basics/015_closures_are_basicaly_functions_stored_in_variables/: Cargo.toml
basics/015_closures_are_basicaly_functions_stored_in_variables/src/: main.rs
basics/016_iterators/src/: main.rs
basics/017_cargo_and_crates/: REF.md
basics/018_smart_pointers/boxT/: Cargo.toml
basics/018_smart_pointers/code_on_cleanup/: Cargo.toml
basics/018_smart_pointers/rc_pointer/: Cargo.toml
basics/019_concurency/threads/: Cargo.toml
basics/020_async/: MORE.md
red-team/snippets/dump-sam-smbretrieval/: Cargo.toml  README-SMB-TRANSFER.md  README.md
red-team/snippets/dump-sam-smbretrieval/src/: main.rs
red-team/tools/: TOOLS.md
red-team/tools/fastnetdiscover/: Cargo.toml  README.md
red-team/tools/fastnetdiscover/src/: arp.rs  lib.rs  main.rs  tcp.rs  udp.rs
red-team/tools/ping_sweep/: Cargo.toml  README.md
red-team/tools/ping_sweep/src/: main.rs
resources/: RESSOURCES.md
(+34 files in other folders)
