[package]
name = "dump-sam-smbretrieval"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
] }

[[bin]]
name = "dump-sam-smbretrieval"
path = "src/main.rs"

[[bin]]
name = "smb-transfer"
path = "src/bin/smb-transfer.rs"
