[package]
name = "fast-netdiscover"
version = "0.2.0"
edition = "2021"
authors = ["Red Team Tool"]
description = "A fast network discovery tool with ping sweep, ARP scan, and TCP/UDP scanning for internal pentests"
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "net", "time", "sync", "macros"] }

# IP network handling
ipnetwork = "0.20"

# Error handling
anyhow = "1.0"

# Async utilities
futures = "0.3"

# Random number generation
rand = "0.8"

# We'll use system commands for ARP scanning to avoid pnet linking issues on Windows
# pnet = { version = "0.34" }
